# rcleaner

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
rules/: cleaner-rules.toml
scripts/: build.sh  dev.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  core.rs  lib.rs  main.rs
src-tauri/tests/: cli_contract.rs
src/components/: action-dock.tsx  app-topbar.tsx  inspector-panel.tsx  target-list.tsx
src/lib/: api.ts  format.ts  mock-data.ts  types.ts
src/theme/: rcleaner-theme.ts
