[package]
name = "rcleaner"
version = "0.1.0"
description = "A lightweight desktop resource manager for macOS caches and dev artifacts"
authors = ["r"]
edition = "2021"

[lib]
name = "rcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
glob = "0.3.3"
plist = "1.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2", features = [] }
toml = "0.8.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
